crates/codegen/language/tests/src/fail/definitions/duplicate_variant_name/test.stderr
error: A variant referencing 'Baz1' already exists.
  --> src/fail/definitions/duplicate_variant_name/test.rs:21:49
   |
21 |                         EnumVariant(reference = Baz1)
   |                                                 ^^^^
